对InitiatingHeapOccupancyPercent写脚本进行分析